WHISTLE-1121: change how call_pickup works: use uuid_bridge instead of intercept. change how park works: use uuid_transfer uuid -both park inline

--- a/lib/whistle_couch-1.0.0/priv/startup.config
+++ b/lib/whistle_couch-1.0.0/priv/startup.config
@@ -1,3 +1,2 @@
-{compact_automatically,true}.
-{default_couch_host,{"localhost",5984,[],[]}}.
-{bigcouch_cookie, 'monster' }.
+{default_couch_host,{"localhost",5984,[],[],5986}}.
+{bigcouch_cookie,'monster'}.
